Fix name cropping: pad intro section to clear fixed header
Uses calc(100px + 4rem) on desktop and calc(80px + 3rem) on mobile
so the name is never hidden behind the position:fixed navbar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3195,7 +3195,7 @@ img.u-pull-left {
  *
  * ------------------------------------------------------------------- */
 .s-intro {
-    padding-top : 12rem;
+    padding-top : calc(100px + 4rem);
     width       : 100%;
     position    : relative;
 }
@@ -3292,7 +3292,7 @@ img.u-pull-left {
 
 @media screen and (max-width: 1000px) {
     .s-intro {
-        padding-top : 6rem;
+        padding-top : calc(80px + 3rem);
     }
 }
 
